Fixed bug of lava and grass not showing in side bar

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body {
 }
 
 .grass {
-    background-image: url(../img/grass.png) !important;
+    background-image: url(../img/grass.png);
 }
 
 
